# emeraude-engine

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  AI-COLLABORATION.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  ROTATION_PHYSICS.md  TODO.md  build.py  format-code.json  format-code.py  run-unit-tests.ps1  run-unit-tests.py  run-unit-tests.sh  update-glfw.sh
.claude/: settings.json
.claude/agents/: cpp-debug-assistant.md  cpp-optimizer.md  cpp20-method-optimizer.md  doxygen-documenter.md  emeraude-code-reviewer.md  emeraude-debug-assistant.md  emeraude-orchestrator.md  emeraude-test-orchestrator.md  emeraude-unit-tests-runner.md
.claude/commands/: README.md  add-resource-type.md  analyze-project.md  build-debug.md  build-only.md  build-release.md  build-test.md  check-conventions.md  check-emeraude-conventions.md  check-references.md  clean-debug-rebuild.md  clean-rebuild.md  clean-release-rebuild.md  config-build-debug.md  config-build-release.md  config-debug-library.md  config-debug-tests.md  config-release-library.md  config-release-tests.md  doc-system.md  find-usage.md  full-test.md  quick-debug-test.md  quick-release-test.md  quick-test.md  run-debug-tests.md  run-release-tests.md  show-architecture.md  update-docs.md  verify-y-down.md
.claude/context/: AGENT_STATE.md  delegation-map.md  shared-architecture.md  shared-conventions.md
cmake/: BuildRenderDocPython.cmake  InstallDependencies.cmake  InstallEmeraudeBase.cmake  PrepareEngineSourceFiles.cmake  SetupASIO.cmake  SetupBC7EncRDO.cmake  SetupBZIP2.cmake  SetupBrotli.cmake  SetupBullet.cmake  SetupCPUFeatures.cmake  SetupFastGLTF.cmake  SetupFreetype.cmake  SetupGLFW.cmake  SetupGLFW3.cmake  SetupHWLOC.cmake  SetupHarfbuzz.cmake  SetupJPEG.cmake  SetupJsonCpp.cmake  SetupLZMA.cmake  SetupLibVPX.cmake  SetupOpenAL.cmake  SetupOpenMP.cmake  SetupPNG.cmake  SetupPostSourcesImGui.cmake  SetupPostSourcesJsonCpp.cmake  SetupRenderDoc.cmake  SetupReproc.cmake  SetupSampleRate.cmake  SetupSndFile.cmake  SetupTagLib.cmake  SetupThreads.cmake  SetupUFBX.cmake  SetupVideoDeviceCapture.cmake  SetupVulkan.cmake  SetupZIP.cmake  SetupZLIB.cmake  SetupZSTD.cmake
docs/: ai-runtime-control.md  architecture-philosophy.md  caution-points.md  component-builder-pattern.md  coordinate-system.md  cpp-conventions.md  development-patterns.md  gpu-selection-failsafe-spec.md  graphics-subsystems.md  graphics-system.md  multi-scene-resource-ownership.md  physics-system.md  pipeline-caching-system.md  render-targets.md  renderable-instance-system.md  resource-management.md  runtime-session.md  saphir-shader-system.md  saphir-v2-proposal.md  scene-graph-architecture.md  shadow-mapping.md  toolkit-system.md  tracer-system.md  troubleshooting.md  trueglass-screen-capture-implementation.md  windows-export-api.md
docs/ADR/: ADR-001-Y-down-coordinate-system.md  ADR-002-vulkan-only-graphics-api.md  ADR-003-fail-safe-resource-management.md  ADR-004-saphir-shader-generation.md  ADR-005-graphics-instancing-system.md  ADR-006-component-composition-over-inheritance.md  ADR-007-physics-four-entity-architecture.md  ADR-008-double-buffering-thread-safety.md  ADR-009-service-locator-pattern.md  ADR-010-vulkan-abstraction-layer.md  README.md
docs/Specs/: gpu-selection-failsafe-spec.md
resources/: tsan_suppressions.txt
src/: AGENTS.md  AbstractDoc.hpp  Argument.hpp  ArgumentDoc.hpp  Arguments.console.cpp  Arguments.cpp  Arguments.hpp  Constants.hpp  Core.console.cpp  Core.cpp  Core.hpp  CoreTypes.hpp  CursorAtlas.cpp  CursorAtlas.hpp  Emeraude.pc.in  FileSystem.console.cpp  FileSystem.cpp  FileSystem.hpp  Help.cpp  Help.hpp  Identification.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Notifier.cpp  Notifier.hpp  PlatformManager.cpp  PlatformManager.hpp  PrimaryServices.cpp  PrimaryServices.hpp  ServiceInterface.hpp  SettingKeys.hpp  SettingStore.hpp  Settings.console.cpp  Settings.cpp  Settings.hpp  ShortcutDoc.hpp  SystemNotification.cpp  SystemNotification.hpp  Tracer.cpp  Tracer.hpp  (+15 more)
src/AVConsole/: AbstractVirtualDevice.cpp  AbstractVirtualDevice.hpp  Manager.cpp  Manager.hpp  Types.hpp
src/Animations/: AGENTS.md  AnimatableInterface.cpp  AnimatableInterface.hpp  AnimationClipResource.cpp  AnimationClipResource.hpp  AnimationInterface.hpp  ConstantValue.hpp  KeyFrame.hpp  RandomValue.cpp  RandomValue.hpp  Sequence.cpp  Sequence.hpp  SkeletalAnimator.cpp  SkeletalAnimator.hpp  SkeletonResource.cpp  SkeletonResource.hpp
src/AssetLoaders/: AGENTS.md  AssetData.hpp  FBXLoader.cpp  FBXLoader.hpp  GLTFLoader.cpp  GLTFLoader.hpp  Interface.hpp
src/Audio/: AGENTS.md  AbstractObject.hpp  Ambience.cpp  Ambience.hpp  AmbienceChannel.cpp  AmbienceChannel.hpp  AmbienceSound.cpp  AmbienceSound.hpp  AudioRecorder.cpp  AudioRecorder.hpp  Buffer.cpp  Buffer.hpp  EffectSlot.cpp  EffectSlot.hpp  ExternalInput.cpp  ExternalInput.hpp  HardwareOutput.cpp  HardwareOutput.hpp  Listener.cpp  Listener.hpp  Manager.console.cpp  Manager.cpp  Manager.hpp  MusicResource.cpp  MusicResource.hpp  OpenAL.EFX.cpp  OpenAL.EFX.hpp  OpenALExtensions.hpp  PlayableInterface.hpp  PlaylistResource.cpp  PlaylistResource.hpp  Recorder.cpp  Recorder.hpp  SoundEnvironmentProperties.hpp  SoundResource.cpp  SoundResource.hpp  SoundfontResource.cpp  SoundfontResource.hpp  Source.cpp  Source.hpp  (+8 more)
src/Console/: AGENTS.md  Argument.cpp  Argument.hpp  Command.hpp  Controllable.cpp  Controllable.hpp  ControllableTrait.cpp  ControllableTrait.hpp  Controller.cpp  Controller.hpp  Expression.cpp  Expression.hpp  Output.hpp  RemoteListener.cpp  RemoteListener.hpp  Types.hpp
src/Graphics/: AGENTS.md  BindlessTextureManager.cpp  BindlessTextureManager.hpp  CubemapMovieResource.cpp  CubemapMovieResource.hpp  CubemapResource.cpp  CubemapResource.hpp  DirectPostProcessEffect.hpp  DummyColorProjectionTexture.cpp  DummyColorProjectionTexture.hpp  DummyShadowTexture.cpp  DummyShadowTexture.hpp  ExternalInput.cpp  ExternalInput.hpp  FontResource.cpp  FontResource.hpp  FramebufferPrecisions.hpp  Frustum.cpp  Frustum.hpp  GrabPass.cpp  GrabPass.hpp  Recorder.cpp  (+49 more)
tools/: remote-console.py
(+1054 files in other folders)
